metadata/force-app/main/default/objects/CustomName_npqJC__c/CustomName_npqJC__c.object-meta.xml
<CustomObject>
    <description>Description_RXNVy</description>
    <label>CustomLabel_OOyIC</label>
    <nameField>
        <label>CustomLabel_OOyIC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_OOyICs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>