metadata/force-app/main/default/objects/CustomName_npqJC__c/fields/CustomField_mexgo__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mexgo__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzKdKE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>