metadata/force-app/main/default/objects/CustomName_npqJC__c/fields/CustomField_qrAps__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qrAps__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldZnOOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>